cabal-version:      2.4
name:               AoC2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Ao2023
    main-is:          Main.hs
    ghc-options:
      -O2
      -threaded
      -fprof-auto
      -prof
      "-with-rtsopts=-N -p -s -hc -i0.1"
    -- Modules included in this executable, other than Main.
    other-modules: Util, Grid, Day1, Day2, Day3, Day4, Day5, Day6

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, containers, Cabal, bytestring, vector, transformers
    hs-source-dirs:   app
    default-language: Haskell2010
